# pc98-emu

./: CMakeLists.txt  README.md  launch.sh
src/: main.cpp
src/emu/: bus.cpp  bus.h  cpu.cpp  cpu.h  mem.cpp  mem.h
src/emu/cpu/: 8086.cpp  8086_cpu.h  z86_core.h  z86_core_internal_post.h  z86_core_internal_pre.h
src/emu/hardware/: 8255.cpp  8255.h
src/emu/zero/: util.h
src/zero/: force_macros.h  util.h
